<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.farrej10.quickbites.HomeActivity"
    android:background="@color/colorBackground">


    <LinearLayout
        android:id="@+id/homeBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonBar">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <ImageButton
                android:id="@+id/homeLogoButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/homebutton"
                android:padding="5dp"
                android:scaleType="centerCrop"
                android:scaleX="2"
                android:scaleY="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/logonobackground" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Search"
                android:inputType="textPersonName"
                android:textColorLink="@android:color/black"
                app:layout_constraintEnd_toStartOf="@+id/homeSearchButton"
                app:layout_constraintStart_toEndOf="@+id/homeLogoButton"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/homeSearchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@drawable/searchbutton"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editText"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/searchicon" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/homeBar"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonMap"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/normalbutton"
                android:drawableStart="@drawable/map"
                android:paddingLeft="10dp"
                android:text="Nearby" />

            <Button
                android:id="@+id/buttonDeals"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/normalbutton"
                android:drawableStart="@drawable/dealicons"

                android:paddingLeft="10dp"
                android:text="Deals" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCategories"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/normalbutton"
                android:drawableStart="@drawable/categories2"
                android:paddingLeft="10dp"
                android:text="Categories" />

            <Button
                android:id="@+id/buttonTopRated"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/normalbutton"
                android:drawableStart="@drawable/star"
                android:paddingLeft="10dp"
                android:text="Top Rated" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/restaurantInfoSection1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/buttonBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/placeholder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/defaultStoreName"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/defaultStoreDescription" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/smile" />

                    <TextView
                        android:id="@+id/happyNum"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:text="@string/defaultHappy" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/neutralface" />

                    <TextView
                        android:id="@+id/neutralNum"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:text="@string/defaultNeutral" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/sadface" />

                    <TextView
                        android:id="@+id/sadNum"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:text="@string/defaultSad" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
