<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.farrej10.quickbites.detailedRestaurant">

    <LinearLayout
        android:id="@+id/homeBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <ImageButton
                android:id="@+id/homeLogoButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/homebutton"
                android:scaleType="centerCrop"
                android:scaleX="2.2"
                android:scaleY="2.2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/logonobackground" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Search"
                android:inputType="textPersonName"
                android:textColorLink="@android:color/black"
                app:layout_constraintEnd_toStartOf="@+id/homeSearchButton"
                app:layout_constraintStart_toEndOf="@+id/homeLogoButton"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/homeSearchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@drawable/searchbutton"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editText"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/searchicon" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="28dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeBar"
        android:src="@drawable/sushi" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="389dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleBox">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/smile" />

        <TextView
            android:id="@+id/happyNum"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/defaultHappy" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/neutralface" />

        <TextView
            android:id="@+id/neutralNum"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/defaultNeutral" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/sadface" />

        <TextView
            android:id="@+id/sadNum"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/defaultSad" />
    </LinearLayout>

    <TextView
        android:id="@+id/DescripBox"
        android:layout_width="360dp"
        android:layout_height="125dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/TitleBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/button3"
        android:layout_width="112dp"
        android:layout_height="48dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorPrimary"
        android:drawableStart="@drawable/dealicons"
        android:text="Offers"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeBar" />

    <Button
        android:id="@+id/button4"
        android:layout_width="112dp"
        android:layout_height="48dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:drawableStart="@drawable/map"
        android:text="Map"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="112dp"
        android:layout_height="48dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:drawableStart="@drawable/star"
        android:text="Reservations"
        android:textSize="10sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />
  
</android.support.constraint.ConstraintLayout>
